# anime-video

./: .gitignore  .gitmodules  .prettierrc  back.cmd  front.cmd  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
config/: hls.ts  route.ts  server.ts  web.ts
dev/test/: utils.test.ts
dev/utils/: parsePath.ts  parseReqest.ts
hls/: CMakeLists.txt  package.json
hls/src/: Hls.cpp  Hls.h  hls_m3u8_worker.h  hls_napi.cpp  hls_napi.h  hls_ts_worker.h
remux/: CMakeLists.txt
remux/src/: JsHttpResponse.cpp  JsHttpResponse.h  Remux.cpp  Remux.h  remux_napi.cpp  remux_napi.h
routes/: server.ts  web.ts
server/: app.ts  hls.d.ts  koa-response.d.ts  package.json  pnpm-lock.yaml  remux.d.ts  web.ts
server/controller/: DataController.ts  ImageController.ts  VideoController.ts
server/koa/: decorators.ts  response.ts
server/middlewares/: response.ts
server/src/: hls.ts  videos.ts
server/test/: video.test.ts
server/web/: development.ts  production.ts
src/: index.js
src/test/: utils.test.ts
src/utils/: parsePath.ts  parseReqest.ts
streamer/: CMakeLists.txt  package.json
streamer/src/: Streamer.cpp  Streamer.h  read_packet_worker.cpp  read_packet_worker.h  streamer_capi.cpp  streamer_capi.h  streamer_napi.cpp  streamer_napi.h  streamer_ref.h
test/server/: video.test.ts
types/: koa-response.d.ts  videos.d.ts
web/: README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/@types/: useMessage.d.ts
web/src/api/: base.ts  index.ts
web/src/assets/: style.css  (+1 more)
web/vite/: alias.ts
www/: package.json  pnpm-lock.yaml
www/src/: App.vue
(+20 files in other folders)
